# toy_payments

./: .gitignore  Cargo.toml  README.md
src/: account.rs  engine.rs  lib.rs  main.rs  transaction.rs
tests/: main.rs
tests/resources/inputs/: trx2.csv  trx3.csv  trx4.csv
tests/resources/outputs/: trx2.csv  trx3.csv
